--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,10 +1,11 @@
 :root {
-	--dark: #374151;
+	--todo: #F3FBFB;
 	--darker: #1F2937;
 	--darkest: #111827;
-	--grey: #6B7280;
-	--pink: #EC4899;
-	--purple: #8B5CF6;
+	--words: #272343;
+	--done: #716f7e;
+	--orange: #ffb803;
+	--yellow: #FFD803;
 	--light: #EEE;
 }
 
@@ -12,14 +13,14 @@
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Fira sans", sans-serif;
+	color: var(--words);
 }
 
 body {
 	display: flex;
+	background-color: var(--todo);
 	flex-direction: column;
 	min-height: 100vh;
-	color: #FFF;
-	background-color: var(--dark);
 }
 
 header {
@@ -32,16 +33,14 @@ header {
 header h1{ 
 	font-size: 2.5rem;
 	font-weight: 300;
-	color: var(--grey);
 	margin-bottom: 1rem;
 }
 
 #new-task-form {
-	display: flex;;
+	display: flex;
 }
 
 input, button {
-	appearance: none;
 	border: none;
 	outline: none;
 	background: none;
@@ -49,23 +48,24 @@ input, button {
 
 #new-task-input {
 	flex: 1 1 0%;
-	background-color: var(--darker);
+	background-color: #FFD803;
 	padding: 1rem;
 	border-radius: 1rem;
 	margin-right: 1rem;
-	color: var(--light);
+	color: var(--words);
 	font-size: 1.25rem;
 }
 
 #new-task-input::placeholder {
 	color: var(--grey);
+	opacity: 0.3;
 }
 
 #new-task-submit {
 	color: var(--pink);
 	font-size: 1.25rem;
 	font-weight: 700;
-	background-image: linear-gradient(to right, var(--pink), var(--purple));
+	background-image: linear-gradient(to right, var(--orange), var(--yellow));
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	cursor: pointer;
@@ -94,34 +94,39 @@ main {
 .task-list h2 {
 	font-size: 1.5rem;
 	font-weight: 300;
-	color: var(--grey);
 	margin-bottom: 1rem;
 }
 
 #tasks .task {
 	display: flex;
 	justify-content: space-between;
-	background-color: var(--darkest);
-	padding: 1rem;
-	border-radius: 1rem;
-	margin-bottom: 1rem;
+	padding: 1.5rem;
+	border-bottom: 1px solid #000;
+}
+
+.task:last-child {
+	border: none !important;
 }
 
 .task .content {
+	display: flex;
+	align-items: center;
 	flex: 1 1 0%;
 }
 
+.task .content .form-check-input {
+	width: 25px;
+	height: 25px;
+}
+
 .task .content .text {
-	color: var(--light);
+	margin-left: 5%;
 	font-size: 1.125rem;
 	width: 100%;
 	display: block;
 	transition: 0.4s;
 }
 
-.task .content .text:not(:read-only) {
-	color: var(--pink);
-}
 
 .task .actions {
 	display: flex;
@@ -153,4 +158,26 @@ main {
 
 .task .actions .delete {
 	color: crimson;
+}
+
+.menu {
+    display: flex;
+    font-size: 1.5em;
+    padding: 0 2.85em;
+	height: 3em;
+	align-items: center;
+}
+
+.menu__item {
+    text-decoration: none;
+    flex-grow: 1;
+    display: flex;
+    position: relative;
+    justify-content: center;
+    padding: 0.55em 0 0.85em; 
+	transition: font-size 0.5s;
+}
+
+.menu__item:hover {
+	font-size: 1.6em;
 }
